bug: text-align fix on ticket selection component

--- a/conference-ticket-generator/src/index.css
+++ b/conference-ticket-generator/src/index.css
@@ -523,7 +523,7 @@ TICKET */
 }
 
 .event-location-wrapper span {
-  display: inline-block;
+  /* display: inline-block; */
   padding-top: 0.5rem;
   font-size: 10px;
 }
